fix: text overflowing in mobile

--- a/src/components/common/MicroChainStatusText/MicroChainStatusText.module.css
+++ b/src/components/common/MicroChainStatusText/MicroChainStatusText.module.css
@@ -1,4 +1,7 @@
 .widget {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
   position: fixed;
   bottom: 20px;
   left: 20px;
@@ -68,11 +71,11 @@
 
 @media screen and (max-width: 500px) {
   .hintText {
-    position: absolute;
-    top: 40px;
+    padding-left: 0px;
   }
   .widget {
     bottom: 60px;
     width: 90%;
+    flex-direction: column;
   }
 }
